--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
 </header>
 <nav>
-    <span class="toggle_menu">=</span>
+    <span class="toggle_menu" (click)="toggleMenu()">{{ menuIcon }}</span>
     <ul class="menu">
         <li><a href="http://haohu.pythonanywhere.com/blog/#html">文档</a>
         </li>
