--- a/src/app/onearticle/onearticle.component.html
+++ b/src/app/onearticle/onearticle.component.html
@@ -1,8 +1,11 @@
 <article>
     <header>
-        <h1 class="blog_header">{{ article.header }}</h1>
-        <div class="blog_meta">{{ article.meta }}</div>
+        <h1 class="blog_header">{{ article.title }}</h1>
+        <div class="blog_meta">{{ article.date | date }}</div>
     </header>
-    <p class="blog_content">{{ article.content }}</p>
-    <footer><a href="http://haohu.pythonanywhere.com/blog/#">更多</a></footer>
+    <p class="blog_content">
+        {{ article.content | slice:0:200 }}
+        <span *ngIf="article.content.length>200">...</span>
+    </p>
+    <footer><a [routerLink]="['/articles', article.id]">更多</a></footer>
 </article>
