--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -43,6 +43,10 @@ nav {
     display: none;
 }
 
+.menu {
+    display: block;
+}
+
 nav ul {
     margin: 0;
     padding: 0;
@@ -133,9 +137,6 @@ nav>ul>li:hover>ul.submenu {
         margin: 5px auto;
         text-align: center;
     }
-    nav>ul {
-        display: none;
-    }
     .toggle_menu {
         display: inline-block;
         box-sizing: border-box;
@@ -147,6 +148,7 @@ nav>ul>li:hover>ul.submenu {
         padding-left: 10px;
     }
     .menu {
+        display: none;
         background-color: black;
     }
     .menu a {
