--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -8,29 +8,7 @@
         </div>
     </div>
     <aside>
-        <div class="ads" id="news">
-            <h3>最新动态</h3>
-            <hr>
-            <ul>
-                <li>2017-07-31 增加Router</li>
-                <li>2017-07-30 发布到Github Pages</li>
-                <li>2017-07-28 前端移植到Angular</li>
-                <li>2016-06-26 制作网站logo，增加样式</li>
-                <li>2016-06-26 搭建开发环境，创建html</li>
-            </ul>
-        </div>
-        <div class="ads" id="links">
-            <h3>相关网站</h3>
-            <hr>
-            <ul>
-                <li><a href="http://www.html5rocks.com/zh/">HTML5 rocks</a></li>
-                <li><a href="http://stackoverflow.com/">Stackoverflow</a></li>
-                <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
-                <li><a href="https://www.djangoproject.com/">Django</a></li>
-                <li><a href="https://github.com/">Github</a></li>
-                <li><a href="http://tutorial.djangogirls.org/en/">Django Girls Tutorial</a></li>
-                <li><a href="https://www.codeschool.com/">Code School</a></li>
-            </ul>
-        </div>
+        <app-news></app-news>
+        <app-links></app-links>
     </aside>
 </div>
