--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -2,6 +2,6 @@
   <h3>最新动态</h3>
   <hr>
   <ul>
-      <li *ngFor="let new of news">{{new.date}} {{new.liner}}</li>
+      <li *ngFor="let new of news">{{new.date | date:'yyyy-MM-dd'}} {{new.liner}}</li>
   </ul>
 </div>
